# ipagent

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
ipagent/: __init__.py
ipagent/internal/: client.py  types.py
