[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipagent"
version = "0.1.0"
description = "FastAPI dependency: get client IP, device, browser, and geo data from ipapi.co"
authors = [{ name = "Musharraf Ibragimov" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "fastapi",
    "httpx",
    "user-agents",
    "pydantic"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]
dynamic = ["requires-python"]


[project.urls]
"Homepage" = "https://github.com/allncuz/ipagent"
"Issues" = "https://github.com/allncuz/ipagent/issues"
